Changes and upgrading controllers

--- a/.env
+++ b/.env
@@ -4,3 +4,9 @@ DIVISION_NAME=division_calculator
 MULTIPLICATION_NAME=multiplication_calculator
 SUBTRACTION_NAME=subtraction_calculator
 SUM_NAME=sum_calculator
+
+MAIN_PORT=8000
+DIVISION_PORT=8100
+MULTIPLICATION_PORT=8200
+SUBTRACTION_PORT=8300
+SUM_PORT=8400
