--- a/division/.env
+++ b/division/.env
@@ -4,3 +4,8 @@ DIVISION_NAME=division_calculator
 MULTIPLICATION_NAME=multiplication_calculator
 SUBTRACTION_NAME=subtraction_calculator
 SUM_NAME=sum_calculator
+
+DIVISION_URL=http://division_calculator:8000/
+MULTIPLICATION_URL=http://multiplication_calculator:8000/
+SUBTRACTION_URL=http://subtraction_calculator:8000/
+SUM_URL=http://sum_calculator:8000/
